fixed line breaks in component descriptions

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -25,14 +25,16 @@
 }
 button.infoButton {
 	font-size: 1.75rem;
-	line-height: 1.75rem;
-	padding: 0rem 0.375rem 0.25rem 0.375rem;
+	/* line-height: 1.75rem; */
+	/* padding: 0rem 0.375rem 0.25rem 0.375rem; */
+	padding: 0.125rem 0.5rem;
 }
 
 .description {
 	padding-bottom: 1rem;
 	margin-bottom: 1rem;
 	border-bottom: 1px solid rgba(0,0,0,0.125);
+	word-break: break-all;
 }
 
 @media (max-width: 1000px) {
